--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
 @import 'tailwindcss/dist/base.css';
 @import 'tailwindcss/dist/components.css';
 @import 'tailwindcss/dist/utilities.css';
+
+button {
+    background-color: rgb(0, 162, 255);
+    color: white;
+    border-radius: 10px;
+}
